HSEARCH-3235 Introduce a profile for JDK11 testing